<resources>
    <string name="app_name">3MMAN</string>
    <string name="coming_soon">敬请期待&#8230;</string>
    <string name="hot">当前最热</string>
    <string name="recent_updates">最近更新</string>
    <string name="index">主页</string>
    <string name="near_rp">最近得分</string>
    <string name="ten_minutes">10分钟以上</string>
    <string name="this_month">本月讨论</string>
    <string name="this_month_collect">本月收藏</string>
    <string name="most_collect">收藏最多</string>
    <string name="near_score">最近加精</string>
    <string name="this_month_hot">本月最热</string>
    <string name="last_month_hot">上月最热</string>
    <string name="hd_video">高清(会员)</string>
    <string name="load_failed">加载失败，点击重试..</string>
    <string name="other">其他</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_download">我的下载</string>
    <string name="more_setting">更多设置</string>
    <string name="copy_log">复制全部日志</string>
    <string name="about_me">关于</string>
    <string name="pl_login">请登录</string>
    <string name="no_data">暂无数据</string>
    <string name="click_retry">点击重试</string>
    <string name="load_error_click_retry">加载失败，请确认当前地址可访问</string>
    <string name="collect">收藏</string>
    <string name="download">下载</string>
    <string name="history_views">最近浏览</string>
    <string name="search_history_title">搜索历史</string>
    <string name="search_history_delete_confirm">确定删除搜索历史“%s”吗？</string>
    <string name="register">注册</string>
    <string name="exit_app">退出程序</string>
    <string name="share">分享</string>
    <string name="close">关闭</string>
    <string name="comments">评论</string>
    <string name="scale_down_show_behavior">com.m3man.behavior.ScaleDownShowBehavior</string>
    <string name="bottom_behavior">com.m3man.behavior.BottomBehavior</string>
    <string name="comment_video_hint_tip">切勿回复与视频无关内容，否则禁言</string>
    <string name="about_item_homepage">去GitHub提建议或者Bug反馈</string>
    <string name="about_item_github">GitHub 项目</string>
    <string name="about_copyright">© %1$s 3mman</string>
    <string name="about_check_update">检查更新</string>
    <string name="playback_engine">播放引擎</string>
    <string name="address_mman">设置视频地址</string>
    <string name="address_forum_mman">设置论坛地址</string>
    <string name="address_t6y">设置CaoLiu地址</string>
    <string name="address_porny">设置 91porny 地址</string>
    <string name="enable_porny_source">启用 91porny 搜索源</string>
    <string name="about_item_clean_cache">清除缓存</string>
    <string name="author_favorite_off">☆</string>
    <string name="author_favorite_on">★</string>
    <string name="proxy_setting">HTTP代理</string>
    <string name="reco_auto_rotate_landscape">横屏视频自动横屏播放</string>
    <string name="reco_hide_action_bar">隐藏播放页操作栏</string>
    <string name="reco_show_actions">呼出操作栏</string>
    <string name="reco_orientation_filter">方向筛选</string>
    <string name="reco_duration_filter">时长筛选</string>
    <string name="reco_filter_all">全部 ▾</string>
    <string name="reco_filter_portrait">竖屏 ▾</string>
    <string name="reco_filter_landscape">横屏 ▾</string>
    <string name="reco_duration_all">不限 ▾</string>
    <string name="reco_auto_next_on">连播 开</string>
    <string name="reco_auto_next_off">连播 关</string>
    <string name="reco_mute">静音</string>
    <string name="reco_reset_filters">恢复全部筛选</string>
    <string name="reco_guide_title">操作指南</string>
    <string name="reco_guide_lines">上下滑动 · 切换视频\n单击 · 暂停 / 播放\n双击左侧点赞 · 双击其他区域快进 1/8\n长按左侧 · 2 倍速\n右上角 · 方向 / 时长 / 连播\n第一页继续下拉 · 换一批</string>
    <string name="reco_guide_dismiss">点击任意位置关闭</string>
    <string name="reco_empty_filtered">当前筛选条件下没有更多内容</string>
    <string name="reco_copy_link">复制链接</string>
    <string name="reco_open_play_page">进入播放页</string>
    <string name="search_go_recommend">换个关键词，或去推荐页逛逛 ↓</string>
    <string name="night_mode">夜间模式</string>
    <string name="point">.</string>
    <string name="title_video">视频</string>
    <string name="title_porny">搜索</string>
    <string name="title_search">搜索</string>
    <string name="title_dashboard">草榴</string>
    <string name="title_forum">论坛</string>
    <string name="title_music">音乐</string>
    <string name="title_photo">图片</string>
    <string name="title_me">我的</string>
    <string name="exit_login_account">退出登录</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_proxy_setting">HTTP代理设置</string>
    <string name="done">完成</string>
    <string name="tip_proxy_setting">Tip：这个设置只是HTTP代理设置，仅代理网页请求(百度免费HTTP代理即可,但可用性一般很低很低)，并不会提高你观看视频的速度，只为解决部分用户观看次数超限问题，如果你的观看次数不受影响，最好不要设置。</string>
    <string name="port">端口号(port)</string>
    <string name="test">测试</string>
    <string name="clean">清空</string>
    <string name="delete">删除</string>
    <string name="title_user_login">用户登录（仅本次有效）</string>
    <string name="title_user_register">用户注册</string>
    <string name="title_author_video">用户视频</string>
    <string name="title_setting">设置</string>
    <string name="forum_content">帖子内容</string>
    <string name="dialog_title_system_msg">系统弹出提示框</string>
    <string name="photo">看图</string>
    <string name="back">返回</string>
    <string name="sure">确定</string>
    <string name="author">作者：</string>
    <string name="send_icon">sendIcon</string>
    <string name="search_jav_video">搜Jav视频</string>
    <string name="porny_filter_title">筛选</string>
    <string name="porny_jump_page_title">跳页</string>
    <string name="porny_filter_sort">排序</string>
    <string name="porny_filter_time">发布时间</string>
    <string name="porny_filter_views">播放量</string>
    <string name="porny_filter_reset">重置</string>
    <string name="porny_filter_apply">应用</string>
    <string name="porny_sort_default">默认</string>
    <string name="porny_sort_latest">最新</string>
    <string name="porny_sort_hot">最热</string>
    <string name="porny_filter_all">全部</string>
    <string name="porny_local_favorite">搜索收藏</string>
    <string name="author_favorite">作者收藏</string>
    <string name="search_hint_default">输入关键词，搜索视频\n如：热门 / 最新 / 女优名\n（点击此处也可直接搜索）</string>
    <string name="search_empty_result">没有找到相关的视频\n换个关键词试试</string>
    <string name="porny_reset_title">重置</string>
    <string name="title_recommend">推荐</string>
    <string name="title_update">更新</string>
    <string name="reco_cover">封面</string>
    <string name="reco_parse_failed">解析失败，点击重试</string>
    <string name="reco_like">赞</string>
    <string name="reco_favorite">收藏</string>
    <string name="reco_dislike">不喜欢</string>
    <string name="reco_detail">详情</string>
    <string name="reco_empty">暂时没有推荐内容</string>
    <string name="reco_retry">重试</string>
    <string name="reco_back">返回竖屏</string>
    <string name="reco_fullscreen">全屏</string>
    <string name="reco_speed">倍速</string>
    <string name="reco_speed_1x">1x</string>
    <string name="reco_speed_2x">2x</string>
    <string name="reco_speed_unsupported">当前设备不支持倍速播放</string>
    <string name="reco_tune">调参</string>
    <string name="reco_loading_more">正在加载更多…</string>
    <string name="reco_no_more">没有更多了</string>
    <string name="reco_liked">已赞</string>
    <string name="reco_unliked">已取消赞</string>
    <string name="reco_favorited">已收藏</string>
    <string name="reco_unfavorited">已取消收藏</string>
    <string name="reco_disliked">已减少此类推荐</string>
    <string name="reco_undisliked">已恢复此类推荐</string>
    <string name="reco_download">下载</string>
    <string name="reco_download_parsing">正在获取下载地址…</string>
    <string name="reco_download_started">已加入下载队列</string>
    <string name="reco_download_failed">下载失败</string>
    <string name="reco_settings_title">推荐算法调参</string>
    <string name="reco_param_like_boost">点赞加权</string>
    <string name="reco_param_dislike_penalty">不喜欢降权</string>
    <string name="reco_param_favorite_boost">收藏加权</string>
    <string name="reco_param_exploration">探索比例</string>
    <string name="reco_param_recency">新鲜度权重</string>
    <string name="reco_param_decay_days">兴趣衰减(天)</string>
    <string name="reco_param_prefetch">预加载数量</string>
    <string name="reco_param_author_ratio">作者召回占比</string>
    <string name="reco_param_tag_coef">标签权重系数</string>
    <string name="reco_param_category_coef">分类权重系数</string>
    <string name="reco_param_author_coef">作者权重系数</string>
    <string name="reco_param_finish_boost">看完加权</string>
    <string name="reco_param_skip_penalty">划走降权</string>
    <string name="reco_param_dislike_filter">不喜欢直接过滤</string>
    <string name="reco_param_reset">恢复默认</string>
    <string name="reco_param_clear_memory">清空兴趣记忆</string>
    <string name="reco_param_saved">参数已保存</string>
    <string name="reco_param_reset_done">已恢复默认参数</string>
    <string name="reco_param_memory_cleared">已清空兴趣记忆</string>
    <string name="reco_profile_summary">已学习 %1$d 个标签 / %2$d 个作者 / %3$d 条行为</string>
    <string name="reco_param_max_age_years">最长发布年限(年)</string>
    <string name="reco_param_advanced">高级设置</string>
    <string name="reco_param_advanced_hint">权重系数等进阶参数，一般不用改</string>
    <string name="reco_param_basic">常用设置</string>
    <string name="reco_param_minus">减小</string>
    <string name="reco_param_plus">增大</string>
    <string name="reco_records">查看学习记录</string>
    <string name="reco_records_title">兴趣记忆明细</string>
    <string name="reco_records_tab_tag">标签</string>
    <string name="reco_records_tab_author">作者</string>
    <string name="reco_records_tab_category">分类</string>
    <string name="reco_records_tab_action">行为</string>
    <string name="reco_records_empty">暂无记录</string>
    <string name="reco_records_close">关闭</string>
    <string name="speed_unsupported">当前设备不支持倍速播放</string>
    <string name="speed_only_while_playing">请先开始播放，再调整倍速</string>
    <string name="speed_unsupported_engine">当前播放通道不支持倍速</string>
    <string name="setting_testing_loading">测试中，请稍后...</string>
    <string name="setting_moving_file_loading">移动文件中，请稍后...</string>
    <string name="setting_reco_engine_loading">推荐引擎加载中…</string>
    <string name="setting_reco_params_saved">推荐参数已保存</string>
    <string name="setting_reco_memory_cleared">推荐记忆已清除</string>
    <string name="setting_not_set">未设置</string>
    <string name="setting_long_press_set">长按设置</string>
    <string name="login_layout_account">帐号</string>
    <string name="login_layout_password">密码</string>
    <string name="login_layout_captcha">验证码</string>
    <string name="login_layout_login">登     录</string>
    <string name="login_layout_remember">记住密码</string>
    <string name="login_layout_tips">Tips：验证码现已是必须的，请正确填写，同时已经不支持自动登录了（因为无法识别验证码）</string>
    <string name="setting_addr_dialog_tip">提示：地址设置只需要主地址，不需要长长的一串，例如：你要设置百度为地址，现在你有地址https://www.baidu.com/s?wd=xxxxrsv_iqid=0xfea01101000018c1xxxxxxx,后面接着长长的一串东西，但是你不需要输入这么多，只需要输入第一个“/”之前的内容即可(包括“/”),所以我们最终设置的地址应该是：https://www.baidu.com/，以此类推。测试结果仅供参考</string>
    <string name="setting_addr_dialog_hint">示例：https://www.baidu.com/</string>
    <string name="register_layout_username">用户名</string>
    <string name="register_layout_email">邮箱</string>
    <string name="register_layout_password">密码</string>
    <string name="register_layout_confirm_password">密码确认</string>
    <string name="register_layout_captcha">验证码</string>
    <string name="register_layout_register">注     册</string>
    <string name="register_layout_tips">Tips:新帐号注册成功后，前几次登录或打开可能会导致程序异常退出（解析错误，新帐号数据结构不一样），这个不打算去做兼容了，请多登录打开程序几次后即可,验证码是非必须的,加载不出随便填</string>
    <string name="comment_layout_sample">| 广州   级别:1  积分:0   注册:1小时前   视频:0   粉丝:0   关注:0</string>
    <string name="comment_layout_sample2">在广州也能遇到这样的就好了</string>
    <string name="comment_layout_time">(44分钟前)</string>
    <string name="appreciate_layout_desc">如果你觉得项目还不错，请我喝杯咖啡，算是对我的认可和鼓励(保存图片打开扫一扫功能,从相册选择图片即可打赏或支付，请认准是GitHub上的apk安装包，否则可能被调包)。</string>
    <string name="appreciate_layout_wechat">微信</string>
    <string name="appreciate_layout_alipay">支付宝</string>
    <string name="cd_captcha_image">验证码图片，点击可刷新</string>
    <string name="cd_qrcode_wechat">微信收款二维码</string>
    <string name="cd_qrcode_alipay">支付宝收款二维码</string>
</resources>