<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_appreciate_qr_code_web_chat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/mm_reward_qrcode_1567130480000"  android:contentDescription="@string/cd_qrcode_wechat"/>

    <ImageView
        android:id="@+id/iv_appreciate_qr_code_ali_pay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:src="@drawable/alipay1567130480000"  android:contentDescription="@string/cd_qrcode_alipay"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:text="@string/appreciate_layout_desc"
        android:textSize="@dimen/sp_14" />

    <RadioGroup
        android:id="@+id/rg_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_web_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/appreciate_layout_wechat" />

        <RadioButton
            android:id="@+id/rb_ali_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appreciate_layout_alipay" />
    </RadioGroup>
</LinearLayout>