<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_background"
    tools:context="com.m3man.ui.mman9video.user.UserLoginActivity">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_layout_username"
            android:theme="@style/MyEditText"
            android:singleLine="true"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_layout_email"
            android:theme="@style/MyEditText"
            android:singleLine="true"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_layout_password"
            android:theme="@style/MyEditText"
            android:singleLine="true"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_password_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_layout_confirm_password"
            android:theme="@style/MyEditText"
            android:singleLine="true"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_captcha"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1000"
                android:singleLine="true"
                android:theme="@style/MyEditText"
                android:maxLength="6"
                android:hint="@string/register_layout_captcha" />

            <ImageView
                android:id="@+id/wb_captcha"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                 android:contentDescription="@string/cd_captcha_image"/>
        </LinearLayout>


        <Button
            android:id="@+id/bt_user_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector"
            android:textColor="@color/common_always_white_text_color"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/register_layout_register" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/common_black_white_text_color"
            android:text="@string/register_layout_tips" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="注意：切勿频繁重复注册，否则可能所有帐号均被删除，且封禁IP" />
    </LinearLayout>

</LinearLayout>
