<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_background"
    android:orientation="vertical"
    tools:context="com.m3man.ui.mman9video.user.UserLoginActivity">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp">

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_layout_account"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:theme="@style/MyEditText" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_layout_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:theme="@style/MyEditText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_captcha"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1000"
                android:hint="@string/login_layout_captcha"
                android:inputType="number"
                android:maxLength="4"
                android:singleLine="true"
                android:theme="@style/MyEditText" />

            <ImageView
                android:id="@+id/wb_captcha"
                android:layout_width="110dp"
                app:srcCompat="@drawable/ic_loading"
                android:layout_height="match_parent"  android:contentDescription="@string/cd_captcha_image"/>
        </LinearLayout>


        <Button
            android:id="@+id/bt_user_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_selector"
            android:text="@string/login_layout_login"
            android:textColor="@color/common_always_white_text_color"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_remember_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_layout_remember"
            android:textColor="@color/common_black_white_text_color"
            android:theme="@style/MyCheckBox" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/login_layout_tips"
            android:textColor="@color/common_black_white_text_color" />
    </LinearLayout>

</LinearLayout>
