<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_addr_dialog_tip"
        android:textColor="@color/common_black_white_text_color" />

    <android.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:id="@+id/atv_dialog_address_setting_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setting_addr_dialog_hint" />

    <android.widget.Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_dialog_address_setting_test"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/test"
            android:textColor="@color/common_always_white_text_color" />

        <android.widget.Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_dialog_address_setting_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/back"
            android:textColor="@color/common_always_white_text_color" />

        <android.widget.Space
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_dialog_address_setting_ok"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_selector_red"
            android:text="@string/sure"
            android:textColor="@color/common_always_white_text_color" />
    </LinearLayout>
</LinearLayout>